fix: add pre-wrap property on timeline content

--- a/src/components/TimelineContent/style.module.scss
+++ b/src/components/TimelineContent/style.module.scss
@@ -19,6 +19,6 @@
 
 .description {
   color: var(--font-color);
-  color: black;
   font-size: 1.8rem;
+  white-space: pre-wrap;
 }
